# mycity

./: .gitignore  manage.py  pyproject.toml
categories/: admin.py  models.py
companies/: admin.py  models.py
mycity/: asgi.py  settings.py  urls.py  wsgi.py
