[tool.poetry]
name = "mycity"
version = "0.1.0"
description = ""
authors = ["pomaxa399 <pomaxa399@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
Django = "^3.1.5"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
